# axum_htmx_template

./: .env  Cargo.toml  docker-compose.YAML  docker-compose.yml  example_config.toml
.sqlx/: query-39426971db36f63745e51ac982367050c634c8d6e59dde0952c40199b4ddf4f8.json  query-60b525c178f2cad080563ea589e2c3ebf5f59be1ca8cafbc4dad7346124c92a4.json  query-fbf321d3b8befc4d393501779c6519bc4e09db9181ae7f4d83f6409d1ecbf55c.json
assets/: main.css
migrations/: 20250414212946_init_migration.down.sql  20250414212946_init_migration.up.sql  20250420172455_init_migration.down.sql  20250420172455_init_migration.up.sql
src/: config.rs  lib.rs  main.rs  utils.rs
src/app/: error.rs  mod.rs  templates.rs  utils.rs
src/app/auth_service/: error.rs  mod.rs  templates.rs
src/app/auth_service/api/: email_login.rs  jwt.rs  mod.rs  utils.rs
src/app/db_service/: mod.rs
src/app/db_service/email_verification_tokens/: mod.rs
src/app/db_service/user/: mod.rs
src/app/smtp_service/: error.rs  mod.rs
src/app/user_service/: mod.rs  templates.rs
src/features/: error.rs  mod.rs
src/features/auth/: error.rs  mod.rs
src/features/auth/claims/: authorization.rs  error.rs  mod.rs  password_reset.rs
src/features/auth/handlers/: mod.rs
src/features/auth/handlers/api/: authentication.rs  mod.rs  password_reset.rs
src/features/auth/handlers/views/: authentication.rs  mod.rs  password_reset.rs
src/features/user/handlers/: views.rs
src/mailer/: error.rs  mod.rs
src/repo/: error.rs  mod.rs  utils.rs
src/repo/infra/: user.rs
src/web_service/: auth.rs  mod.rs  server.rs  user.rs
static/scripts/: main.js
static/styles/: main.css
templates/: base.html  index.html
templates/auth/: email_code.html  email_login.html  login.html  register.html  reset_password.html
templates/auth/emails/: one_time_code.html
templates/auth/fragments/error/: bad_password.html
templates/auth/fragments/forms/password_reset/: change_password.html  code_login.html
templates/user/: dashboard.html
vscode-refresh-firefox-extension/: README.md  package-lock.json  package.json
vscode-refresh-firefox-extension/src/: extension.ts  refresh_firefox.sh
